# subscription-manager-backend

./: .env.example  pyproject.toml  start.sh
app/: claude_service.py  currency.py  database.py  main.py  models.py  stripe_service.py
